--- a/MAB_Project/pom.xml
+++ b/MAB_Project/pom.xml
@@ -63,6 +63,12 @@
  <artifactId>json-simple</artifactId>
  <version>1.1.1</version>
 </dependency>
+<dependency>                                                                                    
+      <groupId>ant</groupId>                                                                        
+      <artifactId>ant</artifactId>                                                                  
+      <version>1.6.5</version>                                                                      
+      <optional>true</optional>                                                                     
+    </dependency>
     </dependencies>
 
 
